--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,4 +17,8 @@
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul>
+<div>
+  <ngb-alert [dismissible]="true">I'm a dismissible alert :) </ngb-alert>
+</div>
+
 
