--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-        <a class="navbar-brand" href="#">ng App</a>
+        <a class="navbar-brand" href="#">ng App Examples</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -11,10 +11,7 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
+                    <a class="nav-link" href="#">My App</a>
                 </li>
             </ul>
             <form class="form-inline mt-2 mt-md-0">
@@ -26,11 +23,9 @@
 </div>
 <div class="container">
     <div class="jumbotron jumbotron-border-radius">
-        <h1>Navbar example</h1>
-        <p class="lead">This example is a quick exercise to illustrate how
-            the top-aligned navbar works. As you scroll,
-            this navbar remains in its original position and moves with
-            the rest of the page.</p>
+        <h1>Project Summery</h1>
+        <p class="lead">This application is developed by Rasika Gayan Gunarathna</p>
+        <p class="lead">These components are developed using Angular 6.</p>
     </div>
 </div>
 <div class="container">
