--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
 </div>
 <div class="container">
     <div class="jumbotron jumbotron-border-radius">
-        <h1>Project Summery</h1>
+        <h1>Project Summary</h1>
         <p class="lead">This application is developed by Rasika Gayan Gunarathna</p>
         <p class="lead">These components are developed using Angular 6.</p>
     </div>
